// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> centered Modal onClose callback is not passed 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={true}
  >
    <TouchableWithoutFeedback>
      <View
        style={
          Object {
            "backgroundColor": "rgba(22, 47, 86, 0.38)",
            "bottom": 0,
            "height": 1334,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 750,
          }
        }
      />
    </TouchableWithoutFeedback>
    <View
      hideModalContentWhileAnimating={false}
      pointerEvents="box-none"
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
          "margin": 37.5,
          "marginBottom": 24,
          "marginLeft": 24,
          "marginRight": 24,
          "marginTop": 24,
          "transform": Array [
            Object {
              "translateY": 1334,
            },
          ],
        }
      }
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1.0)",
              "borderRadius": 4,
            },
          ]
        }
        variant="centered"
      >
        <View
          style={
            Array [
              Array [
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 12,
                },
              ],
            ]
          }
        >
          <Text
            _isUnderlined={false}
            _letterSpacing="small"
            align="left"
            color="shade.980"
            size="large"
            style={
              Array [
                Object {
                  "color": "rgba(22, 47, 86, 0.87)",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            testID="ds-text"
            weight="regular"
          >
            Title
          </Text>
        </View>
        <View
          style={
            Array [
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 16,
                },
              ],
            ]
          }
        >
          <Text
            _isUnderlined={false}
            _letterSpacing="small"
            align="left"
            color="shade.980"
            size="large"
            style={
              Array [
                Object {
                  "color": "rgba(22, 47, 86, 0.87)",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            testID="ds-text"
            weight="regular"
          >
            Content
          </Text>
        </View>
        <View
          style={
            Array [
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingLeft": 24,
                  "paddingRight": 24,
                  "paddingTop": 16,
                },
              ],
            ]
          }
        >
          <Text
            _isUnderlined={false}
            _letterSpacing="small"
            align="left"
            color="shade.980"
            size="large"
            style={
              Array [
                Object {
                  "color": "rgba(22, 47, 86, 0.87)",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            testID="ds-text"
            weight="regular"
          >
            Footer
          </Text>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;

exports[`<Modal /> centered Modal onClose callback is passed 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={true}
  >
    <TouchableWithoutFeedback>
      <View
        style={
          Object {
            "backgroundColor": "rgba(22, 47, 86, 0.38)",
            "bottom": 0,
            "height": 1334,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 750,
          }
        }
      />
    </TouchableWithoutFeedback>
    <View
      hideModalContentWhileAnimating={false}
      pointerEvents="box-none"
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
          "margin": 37.5,
          "marginBottom": 24,
          "marginLeft": 24,
          "marginRight": 24,
          "marginTop": 24,
          "transform": Array [
            Object {
              "translateY": 1334,
            },
          ],
        }
      }
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1.0)",
              "borderRadius": 4,
            },
          ]
        }
        variant="centered"
      >
        <View
          style={
            Array [
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 8,
                  "paddingTop": 4,
                },
                Array [
                  Object {
                    "alignSelf": "flex-end",
                    "flexDirection": "column",
                  },
                ],
              ],
            ]
          }
        >
          <TouchableHighlight
            activeOpacity={1}
            block={false}
            color="shade"
            delayPressOut={100}
            disabled={false}
            size="medium"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "black",
                  "borderRadius": 2,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                },
                Array [
                  Object {
                    "paddingBottom": 0,
                    "paddingLeft": 6,
                    "paddingRight": 6,
                    "paddingTop": 0,
                  },
                  Array [
                    Object {
                      "height": 36,
                    },
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                    ],
                  ],
                ],
              ]
            }
            testID="close-button"
            underlayColor="rgba(22, 47, 86, 0.38)"
            variant="tertiary"
            variantColor="shade"
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={24}
              bbWidth={24}
              fill="none"
              focusable={false}
              height={24}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {
                    "flex": 0,
                    "height": 24,
                    "width": 24,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <RNSVGGroup
                fill={null}
                propList={
                  Array [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                  fill={4281617004}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </TouchableHighlight>
        </View>
        <View
          style={
            Array [
              Array [
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 12,
                },
              ],
            ]
          }
        >
          <Text
            _isUnderlined={false}
            _letterSpacing="small"
            align="left"
            color="shade.980"
            size="large"
            style={
              Array [
                Object {
                  "color": "rgba(22, 47, 86, 0.87)",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            testID="ds-text"
            weight="regular"
          >
            Title
          </Text>
        </View>
        <View
          style={
            Array [
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 16,
                },
              ],
            ]
          }
        >
          <Text
            _isUnderlined={false}
            _letterSpacing="small"
            align="left"
            color="shade.980"
            size="large"
            style={
              Array [
                Object {
                  "color": "rgba(22, 47, 86, 0.87)",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            testID="ds-text"
            weight="regular"
          >
            Content
          </Text>
        </View>
        <View
          style={
            Array [
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingLeft": 24,
                  "paddingRight": 24,
                  "paddingTop": 16,
                },
              ],
            ]
          }
        >
          <Text
            _isUnderlined={false}
            _letterSpacing="small"
            align="left"
            color="shade.980"
            size="large"
            style={
              Array [
                Object {
                  "color": "rgba(22, 47, 86, 0.87)",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            testID="ds-text"
            weight="regular"
          >
            Footer
          </Text>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;

exports[`<Modal /> renders bottomsheet Modal 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={true}
  >
    <TouchableWithoutFeedback>
      <View
        style={
          Object {
            "backgroundColor": "rgba(22, 47, 86, 0.38)",
            "bottom": 0,
            "height": 1334,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 750,
          }
        }
      />
    </TouchableWithoutFeedback>
    <View
      hideModalContentWhileAnimating={false}
      pointerEvents="box-none"
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
          "margin": 37.5,
          "marginBottom": 24,
          "marginLeft": 24,
          "marginRight": 24,
          "marginTop": 24,
          "transform": Array [
            Object {
              "translateY": 1334,
            },
          ],
        }
      }
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1.0)",
              "borderRadius": 4,
            },
          ]
        }
        variant="centered"
      >
        <View
          style={
            Array [
              Array [
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 12,
                },
              ],
            ]
          }
        >
          <Text
            _isUnderlined={false}
            _letterSpacing="small"
            align="left"
            color="shade.980"
            size="large"
            style={
              Array [
                Object {
                  "color": "rgba(22, 47, 86, 0.87)",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            testID="ds-text"
            weight="regular"
          >
            Title
          </Text>
        </View>
        <View
          style={
            Array [
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 16,
                },
              ],
            ]
          }
        >
          <Text
            _isUnderlined={false}
            _letterSpacing="small"
            align="left"
            color="shade.980"
            size="large"
            style={
              Array [
                Object {
                  "color": "rgba(22, 47, 86, 0.87)",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            testID="ds-text"
            weight="regular"
          >
            Content
          </Text>
        </View>
        <View
          style={
            Array [
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingLeft": 24,
                  "paddingRight": 24,
                  "paddingTop": 16,
                },
              ],
            ]
          }
        >
          <Text
            _isUnderlined={false}
            _letterSpacing="small"
            align="left"
            color="shade.980"
            size="large"
            style={
              Array [
                Object {
                  "color": "rgba(22, 47, 86, 0.87)",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            testID="ds-text"
            weight="regular"
          >
            Footer
          </Text>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;

exports[`<Modal /> renders fullscreen Modal 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={true}
  >
    <TouchableWithoutFeedback>
      <View
        style={
          Object {
            "backgroundColor": "rgba(22, 47, 86, 0.38)",
            "bottom": 0,
            "height": 1334,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 750,
          }
        }
      />
    </TouchableWithoutFeedback>
    <View
      hideModalContentWhileAnimating={false}
      pointerEvents="box-none"
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
          "margin": 37.5,
          "marginBottom": 24,
          "marginLeft": 24,
          "marginRight": 24,
          "marginTop": 24,
          "transform": Array [
            Object {
              "translateY": 1334,
            },
          ],
        }
      }
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1.0)",
              "borderRadius": 4,
            },
          ]
        }
        variant="centered"
      >
        <View
          style={
            Array [
              Array [
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 8,
                  "paddingTop": 4,
                },
                Array [
                  Object {
                    "alignSelf": "flex-end",
                    "flexDirection": "column",
                  },
                ],
              ],
            ]
          }
        >
          <TouchableHighlight
            activeOpacity={1}
            block={false}
            color="shade"
            delayPressOut={100}
            disabled={false}
            size="medium"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "black",
                  "borderRadius": 2,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                },
                Array [
                  Object {
                    "paddingBottom": 0,
                    "paddingLeft": 6,
                    "paddingRight": 6,
                    "paddingTop": 0,
                  },
                  Array [
                    Object {
                      "height": 36,
                    },
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                    ],
                  ],
                ],
              ]
            }
            testID="close-button"
            underlayColor="rgba(22, 47, 86, 0.38)"
            variant="tertiary"
            variantColor="shade"
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={24}
              bbWidth={24}
              fill="none"
              focusable={false}
              height={24}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {
                    "flex": 0,
                    "height": 24,
                    "width": 24,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <RNSVGGroup
                fill={null}
                propList={
                  Array [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                  fill={4281617004}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </TouchableHighlight>
        </View>
        <View
          style={
            Array [
              Array [
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 12,
                },
              ],
            ]
          }
        >
          <Text
            _isUnderlined={false}
            _letterSpacing="small"
            align="left"
            color="shade.980"
            size="large"
            style={
              Array [
                Object {
                  "color": "rgba(22, 47, 86, 0.87)",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            testID="ds-text"
            weight="regular"
          >
            Title
          </Text>
        </View>
        <View
          style={
            Array [
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 16,
                },
              ],
            ]
          }
        >
          <Text
            _isUnderlined={false}
            _letterSpacing="small"
            align="left"
            color="shade.980"
            size="large"
            style={
              Array [
                Object {
                  "color": "rgba(22, 47, 86, 0.87)",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
              ]
            }
            testID="ds-text"
            weight="regular"
          >
            Content
          </Text>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;
